# github-knowledge-vault

./: .env.example  .env.production  .gitignore  .gitmodules  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  MCP_DEPLOYMENT.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  railway.json  setup-deployment.sh  tailwind.config.ts  tsconfig.json  vite.config.ts.timestamp-1748089123432-bb46b7399f4bc.mjs  vitest.config.ts
.github/workflows/: README.md  frontend.yml  integration.yml  mcp-bridge.yml
.temp/: frontend_refinement_plan.md
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/.claude/: CLAUDE.md
backend/app/: config.py  llm.py  main.py  mcp.py
backend/tests/: __init__.py  conftest.py  mock_mcp_server.py  test_error_scenarios.py  test_integration.py  test_rest_api.py  test_websocket.py
docs/: FRONTEND_INTEGRATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  MCP_ARCHITECTURE.md  MCP_BRIDGE_DETAILED_GUIDE.md  MCP_IMPLEMENTATION_PLAN.md  MCP_SERVER_DETAILED_GUIDE.md  REPOSITORY_STRUCTURE.md  TYPESCRIPT_STRICTNESS.md  backend-spec-simplified.md
frontend/: .env.example  CLAUDE.md  README.md  index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  (+1 more)
mcp-bridge/: .env.example  .gitignore  Dockerfile  README.md  TESTING.md  TEST_RESULTS.md  cache.py  deploy.sh  main.py  mcp_client.py  models.py  render.yaml  requirements.txt  test_docker_config.py  test_docker_integration.py  test_mcp_client_unit.py
scripts/: test-mcp-integration.sh
src/: App.tsx  index.css
(+103 files in other folders)
