[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-knowledge-vault-backend"
version = "0.1.0"
description = "FastAPI backend for GitHub Knowledge Vault - integrates Claude API with MCP server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "litellm>=1.50.0",
    "websockets>=12.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",  # for testing
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
